# Interactive-Router

./: .gitignore  CMakeLists.txt  README.md  build_router_core.ps1  build_router_core.sh  requirements.txt  run_with_kicad_python.ps1  run_with_kicad_python.sh
cpp_core/: pybind_api.cpp
cpp_core/include/: geometry.h  grid_3d.h  net_analysis.h  router.h
cpp_core/src/: grid_3d.cpp  net_analysis.cpp  router.cpp
router_app/: kicad_parser.py  main.py  reroute_engine.py
router_app/gui/: main_window.py  pcb_canvas.py
